--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "react": "^16.6.0",
+    "react-cookie": "^3.0.4",
     "react-dom": "^16.6.0",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.1.0",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition": "^1.0.3",
     "react-transition-group": "^2.5.0",
