--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.4.1",
     "node": "^11.6.0",
-    "typeface-roboto": "0.0.54"
+    "typeface-roboto": "0.0.54",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
