storysection creation and ui updates

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "windows_install": "npm run windows-dependencies && npm run server-install && npm run client-install",
     "windows-dependencies": "npm install --global --productions windows-build-tools",
-    "client-install": "cd client && npm install && npm i bootstrap reactstrap react-router-dom uuid react-transition-group redux react-redux redux-thunk axios react-cookie @fortawesome/fontawesome-svg-core @fortawesome/free-solid-svg-icons @fortawesome/react-fontawesome @fortawesome/free-brands-svg-icons@prerelease && npm install react-router-dom && npm install typeface-roboto --save",
+    "client-install": "cd client && npm install && npm i bootstrap reactstrap @material-ui/core react-router-dom uuid react-transition-group redux react-redux redux-thunk axios react-cookie @fortawesome/fontawesome-svg-core @fortawesome/free-solid-svg-icons @fortawesome/react-fontawesome @fortawesome/free-brands-svg-icons@prerelease && npm install react-router-dom && npm install typeface-roboto --save",
     "server-install": "npm install jsonwebtoken express mongoose concurrently bcrypt && npm install -D nodemon",
     "start": "node server.js",
     "server": "nodemon server.js",
@@ -16,14 +16,17 @@
   "author": "Jake Grafenstein",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@material/fab": "^0.43.0",
     "bcrypt": "^3.0.3",
     "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.2",
+    "mongoose": "^5.4.5",
     "node": "^11.6.0",
+    "node-sass": "^4.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
