--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-brands-svg-icons": "^5.5.0-2",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/react-fontawesome": "^0.1.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.8",
+    "@material/fab": "^0.43.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-cookie": "^3.0.8",
     "react-dom": "^16.7.0",
@@ -19,7 +24,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
     "react-transition": "^1.0.3",
-    "react-transition-group": "^2.5.2",
+    "react-transition-group": "^2.5.3",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
