--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "windows_install": "npm run windows-dependencies && npm run server-install && npm run client-install",
     "windows-dependencies": "npm install --global --productions windows-build-tools",
     "client-install": "cd client && npm install && npm i bootstrap reactstrap @material-ui/core react-router-dom uuid react-transition-group redux react-redux redux-thunk axios react-cookie @fortawesome/fontawesome-svg-core @fortawesome/free-solid-svg-icons @fortawesome/react-fontawesome @fortawesome/free-brands-svg-icons@prerelease && npm install react-router-dom && npm install typeface-roboto --save",
-    "server-install": "npm install jsonwebtoken express mongoose concurrently bcrypt && npm install -D nodemon && npm install --save aws-s3",
+    "server-install": "npm install jsonwebtoken express express-session cookie-parser mongoose concurrently bcrypt && npm install -D nodemon && npm install --save aws-s3",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
@@ -18,15 +18,15 @@
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material/fab": "^0.43.0",
-    "aws-s3": "^2.0.2",
+    "aws-s3": "^2.0.3",
     "aws-sdk": "^2.396.0",
     "bcrypt": "^3.0.4",
     "concurrently": "^4.1.0",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.10",
+    "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.17",
     "node": "^11.6.0",
     "node-sass": "^4.11.0",
     "passport": "^0.4.0",
@@ -35,6 +35,6 @@
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.10"
   }
 }
